welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:17: error: not found: type int
def ado(n:int):Boolean=
          ^countTeen:14: error: type mismatch;
 found   : Unit
 required: Int
		compteur=compteur+1 
                        ^countTeen:13: error: type mismatch;
 found   : Unit
 required: Int
	if ( ado(d)){
        ^