welcome.lessons.welcome.bat.bool1.CountTeen.scala.code

def countTeen(a:Int, b:Int,c:Int,d:Int): Int = {
	var compteur:Int=0
	if ( ado(a)){
		compteur=compteur+1 
	} 
	if ( ado(b)) {
		compteur=compteur+1 
	} 
	if ( ado(c)) {
		compteur=compteur+1 
	}	
	if ( ado(d)){
		compteur=compteur+1 
	}
}
def ado(n:int):Boolean=
{
	return 13<=n && n<=19
}